2005-05-25  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac : Releasing 0.2.1

2005-05-25  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c: (source_queue_media): 
	missing closing parenthisis
	removed unused 'filled' variable

2005-05-25  Wouter Paesen <wouter@kangaroot.net>

	Reviewed by : Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c: (source_queue_media):
	memleak bugfix

2005-05-23  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c:
	safer pre-rolling
	* gnl/gnltimeline.c:
	add query/event handling to timeline timer's pads
	fixed bug in request pad handling

2005-05-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c:
	No more using global "gnonlin" debug category, using element specific categories

2005-05-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnltimeline.c:
	Added "src_%s" PadTemplate so _request_new_pad() works...
	
	* gnl/gnl.c: 
	* gnl/gnl.h:
	* gnl/gnlcomposition.c:
	* gnl/gnlobject.c:
	* gnl/gnloperation.c:
	* gnl/gnltimeline.c:
	No more using global "gnonlin" debug category, using element specific categories

	* docs/libs/tmpl/gnloperation.sgml: added "element" property documentation

	* docs/libs/gnonlin-sections.txt: removed GST_CAT_DEFAULT

2005-05-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnltimeline.c:
	Implemented GstElement->request_new_pad() in order to get a pad
	corresponding to a composition using standard API.
	Implement GstBin->add_element() in order to add a composition to the
	timeline using standard API.

	* gnl/gnloperation.c:
	GstElement of a GnlOperation can now be set/get using the "element" 
	property

2005-04-19  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlcomposition.c: 
	gnl_composition_dispose was superfluous, now removed

2005-04-12  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac: releasing 0.2.0 !!

2005-04-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnltimeline.c: (gnl_timeline_query):